dataset1235/2025-2/2947369575/users/1530961528/executions/1003782500_3691284457.log
== RUN (2025-09-01 21:24:58)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:25:11)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.96
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
3.25
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
2.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
1.9
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
10.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
2.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:26:50)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * + 4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:26:23)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.24
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
5.5
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
4.9
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
3.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
18.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
4.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:26:18)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.24
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
5.5
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
4.9
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
3.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
18.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
4.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:25:10)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.96
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
3.25
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
2.8
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
1.9
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
10.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
2.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:24:59)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media = (nata1 + nota2 + nota3 + nota4) / (1 + 2 + 3 + 4)
             ^^^^^
NameError: name 'nata1' is not defined. Did you mean: 'nota1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:26:51)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * + 4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:26:19)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4) / (1 + 2 + 3 + 4)

print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.24
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
5.5
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
4.9
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
3.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
18.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
4.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
